Chaz feedback (commit to be squashed)

--- a/nas_spec/components/schemas/PTC/PTCSenderAccountHolderTypes/02_PTCSenderAccountHolderCorporate.yaml
+++ b/nas_spec/components/schemas/PTC/PTCSenderAccountHolderTypes/02_PTCSenderAccountHolderCorporate.yaml
@@ -48,7 +48,7 @@ properties:
     type: string
     enum:
       - rtn_and_bank_account_number
-      - IBAN
+      - iban
       - card_account
       - email
       - phone_number
