--- a/nas_spec/components/schemas/PTC/PTCSenderAccountHolderTypes/01_PTCSenderAccountHolderIndividual.yaml
+++ b/nas_spec/components/schemas/PTC/PTCSenderAccountHolderTypes/01_PTCSenderAccountHolderIndividual.yaml
@@ -57,7 +57,7 @@ properties:
     type: string
     enum:
       - rtn_and_bank_account_number
-      - IBAN
+      - iban
       - card_account
       - email
       - phone_number
