--- a/abc_spec/components/schemas/Payments/PaymentResponse.yaml
+++ b/abc_spec/components/schemas/Payments/PaymentResponse.yaml
@@ -110,7 +110,7 @@ properties:
         example: '440644309099499894406'
       recommendation_code:
         type: string
-        description: "A code that represents the next recommended action when retry this payment"
+        description: "A <a href="https://docs.checkout.com/preview/drafts/recommendation-codes" target="blank">code</a> that represents the next recommended action for the payment"
         example: "02"
   eci:
     type: string
