--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,53 +1,90 @@
-name: Node.js CI
+# This is a basic workflow to help you get started with Actions
 
-on: [ pull_request ]
+name: Creates a PR for APM team changes in documentation around APMs
+
+on:
+  push:
+    branches:      
+      - 'main'  
 
 env:
   CI: true
+  PAT: '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'
 
 jobs:
-  run-checks:
+  upload-spec:
     runs-on: ubuntu-latest
-
-    steps:
+    steps: 
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+        
       - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2.1.5
         with:
-          node-version: 14.x
-
-      - name: Install node modules
-        run: npm ci --ignore-scripts
-
-      - name: Build ABC & NAS specs
-        run: npm run build:all
-
-      - name: Validate schema
+          persist-credentials: true
+          repository: cko-apm/checkout-api-reference
+          ref: ${{ steps.extract_branch.outputs.branch }}                   
+              
+      - name: Delete non-Demo files
         run: |
-          npm run test:abc
-          npm run test:nas
-
-      - uses: actions/upload-artifact@master
+          echo ********** Listing contents of spec/ ************
+          ls spec/*/**
+          echo ********** Created an empty folder ************
+          mkdir newspec
+          echo ********** Copying over what we need into the new folder ************
+          mkdir -p newspec/components/schemas
+          cp -r spec/components/**/Demo newspec/components/schemas
+          mkdir -p newspec/paths
+          cp spec/paths/demo*.* newspec/paths          
+          echo ********** Listing contents of newspec/ ************
+          ls spec/*/**   
+          echo ********** Creating copies of spec for ABC and NAS ************
+          cp -r newspec/ nas_spec/
+          cp -r newspec/ abc_spec/
+          echo ********** Ready to upload specs ************
+          
+      - uses: actions/upload-artifact@v2
         with:
-          name: my-artifact
-          path: web_deploy
-
-  check-broken-links:
-    needs: run-checks
+          name: specification
+          path: newspec/
+        
+  publish-spec:
     runs-on: ubuntu-latest
+    needs: upload-spec
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/download-artifact@v2
         with:
-          python-version: 3.8
-      - uses: actions/download-artifact@master
+          name: specification
+          path: src_spec
+
+      - name: Fetch Checkout Api Reference repository
+        uses: actions/checkout@v2
         with:
-          name: my-artifact
-          path: web_deploy
-      - name: Install dependencies
+          repository: checkout/checkout-api-reference
+          ref: master
+          token: ${{ env.PAT }}
+          path: src
+          
+      - name: Commit Api specification
+        working-directory: src
         run: |
-          python -m pip install --upgrade pip
-          if [ -f scripts/link_checker/requirements.txt ]; then pip install -r scripts/link_checker/requirements.txt; fi
-      - name: Check for broken links
-        run: |
-          python scripts/link_checker/run.py
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config user.name "$GITHUB_ACTOR"
+          git branch -m "APM/Api-Spec"
+          rsync -a ../src_spec/ abc_spec/
+          rsync -a ../src_spec/ nas_spec/
+          git add .
+          git commit -m 'Publish new API Specification'
+          git push origin HEAD
+
+      - uses: actions/github-script@v4
+        with:
+          github-token: ${{ env.PAT }}
+          script: |
+            await github.pulls.create({
+              owner: 'checkout',
+              repo: 'checkout-api-reference',
+              head: "APM/Api-Spec",
+              base: 'master',
+              title: "APM: Update API Specification"
+            });
